# hello-cpp-clang

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Containerfile  devcontainer.json
src/: app.ixx  main.cpp
